src/snapshots/ruff__linter__tests__N814_N814.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    CamelcaseImportedAsConstant:
      - SubMod
      - SUBMOD
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 28
  fix: ~
- kind:
    CamelcaseImportedAsConstant:
      - CamelCase
      - CAMELCASE
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 39
  fix: ~
- kind:
    CamelcaseImportedAsConstant:
      - AnotherCamelCase
      - ANOTHER_CAMELCASE
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 54
  fix: ~

