src/snapshots/ruff__linter__tests__N815_N815.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    MixedCaseVariableInClassScope: mixedCase
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 14
  fix: ~
- kind:
    MixedCaseVariableInClassScope: _mixedCase
  location:
    row: 5
    column: 5
  end_location:
    row: 5
    column: 15
  fix: ~
- kind:
    MixedCaseVariableInClassScope: mixed_Case
  location:
    row: 6
    column: 5
  end_location:
    row: 6
    column: 15
  fix: ~

