src/snapshots/ruff__linter__tests__N815_N815.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  class C:
      lower = 0
      CONSTANT = 0
|     mixedCase = 0
|> Variable `mixedCase` in class scope should not be mixedCase
|     _mixedCase = 0
|> Variable `_mixedCase` in class scope should not be mixedCase
|     mixed_Case = 0
|> Variable `mixed_Case` in class scope should not be mixedCase

