src/snapshots/ruff__linter__tests__N817_N817.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    CamelcaseImportedAsAcronym:
      - SubMod
      - SM
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 24
  fix: ~
- kind:
    CamelcaseImportedAsAcronym:
      - CamelCase
      - CC
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 32
  fix: ~

