src/snapshots/ruff__linter__tests__N817_N817.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| import mod.CaMel as CM
|> Camelcase `CaMel` imported as acronym `CM`
| from mod import CamelCase as CC
|> Camelcase `CamelCase` imported as acronym `CC`

