src/snapshots/ruff__linter__tests__N818_N818.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    ErrorSuffixOnExceptionName: C
  location:
    row: 9
    column: 1
  end_location:
    row: 11
    column: 1
  fix: ~

