src/snapshots/ruff__linter__tests__N818_N818.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  class Error(Exception):
      pass
  
  
  class AnotherError(Exception):
      pass
  
  
| class C(Exception):
|     pass

