src/snapshots/ruff__linter__tests__RUF001_RUF001.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| x = "𝐁ad string"
|> String contains ambiguous unicode character '𝐁' (did you mean 'B'?)
  
  
  def f():
      """Here's a docstring with an unusual parenthesis: ）"""
      # And here's a comment with an unusual punctuation mark: ᜵
      ...

